feat: add iot appsettings

--- a/src/Services/Masa.Dcc.Service/appsettings.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.json
@@ -6,5 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=rm-bp17pbv791jbq67z6.sqlserver.rds.aliyuncs.com,3433;Database=loncloud-dcc;User Id=masastack;Password=hzss@123masastack;"
+  },
+  "RedisConfig": {
+    "Servers": [
+      {
+        "Host": "r-bp1pu2t1ydd4pdkozz.redis.rds.aliyuncs.com",
+        "Port": 6379
+      }
+    ],
+    "DefaultDatabase": 8,
+    "Password": "hzss@123redis"
+  },
+  "PmClientAddress": "https://pm-service.lonsid.cn/",
+  "IdentityServerUrl": "https://sso.lonsid.cn"
 }
