--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.json
@@ -1,9 +1,27 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "ServiceBaseUrl": "https://dcc-service.lonsid.cn/",
+  "PmClientAddress": "https://pm-service.lonsid.cn/",
+  "AuthServiceBaseAddress": "https://auth-service.lonsid.cn/",
+  "McServiceBaseAddress": "https://mc-service.lonsid.cn",
+  "DccOptions": {
+    "ManageServiceAddress": "https://dcc-service.lonsid.cn/",
+    "RedisOptions": {
+      "Servers": [
+        {
+          "Host": "r-bp1pu2t1ydd4pdkozz.redis.rds.aliyuncs.com",
+          "Port": 6379
+        }
+      ],
+      "DefaultDatabase": 8,
+      "Password": "hzss@123redis"
+    },
+    "Secret": ""
+  }
 }
