feat:udpate sql pwd

--- a/src/Services/Masa.Dcc.Service/appsettings.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=rm-bp17pbv791jbq67z6.sqlserver.rds.aliyuncs.com,3433;Database=loncloud-dcc;User Id=masastack;Password=hzss@123masastack;"
+    "DefaultConnection": "Server=rm-bp17pbv791jbq67z6.sqlserver.rds.aliyuncs.com,3433;Database=loncloud-dcc;User Id=masastack;Password=Hzss@123masastack;"
   },
   "RedisConfig": {
     "Servers": [
