feat:add observable

--- a/src/Services/Masa.Dcc.Service/appsettings.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.json
@@ -9,6 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=rm-bp17pbv791jbq67z6.sqlserver.rds.aliyuncs.com,3433;Database=loncloud-dcc;User Id=masastack;Password=Hzss@123masastack;"
   },
+  "Masa:Observable": {
+    "OtlpUrl": "http://otel-dev-opentelemetry-collector-agent.opentelemetry:4317",
+    "ServiceName": "masa.dcc.service",
+    "ServiceVersion": "1.0.0",
+    "ServiceNameSpace": "iot"
+  },
   "RedisConfig": {
     "Servers": [
       {
