--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/appsettings.json
@@ -10,6 +10,12 @@
   "PmClientAddress": "https://pm-service.lonsid.cn/",
   "AuthServiceBaseAddress": "https://auth-service.lonsid.cn/",
   "McServiceBaseAddress": "https://mc-service.lonsid.cn",
+  "Masa:Observable": {
+    "OtlpUrl": "http://otel-dev-opentelemetry-collector-agent.opentelemetry:4317",
+    "ServiceName": "masa.dcc.web",
+    "ServiceVersion": "1.0.0",
+    "ServiceNameSpace": "iot"
+  },
   "DccOptions": {
     "ManageServiceAddress": "https://dcc-service.lonsid.cn/",
     "RedisOptions": {
