--- a/src/Services/Masa.Dcc.Service/appsettings.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.json
@@ -26,5 +26,5 @@
     "Password": "hzss@123redis"
   },
   "PmClientAddress": "https://pm-service.lonsid.cn/",
-  "IdentityServerUrl": "https://sso.lonsid.cn"
+  "IdentityServerUrl": "https://auth-sso.lonsid.cn/"
 }
