--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="0.7.0-preview.22" />
-    <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="0.7.0-preview.22" />
-    <PackageReference Include="Masa.Utils.Configuration.Json" Version="0.7.0-preview.22" />
+    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-preview.8" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="1.0.0-preview.8" />
+    <PackageReference Include="Masa.Utils.Configuration.Json" Version="1.0.0-preview.8" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
