feat: update masa stack config

--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -1,21 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "RedisConfig": {
-    "Servers": [
-      {
-        "Host": "10.175.207.202",
-        "Port": 30260
-      }
-    ],
-    "DefaultDatabase": 0,
-    "Password": "Hzss@123redis"
-  },
-  "PmClientAddress": "https://pm-service-develop.masastack.com/",
-  "IdentityServerUrl": "https://sso-develop.masastack.com"
+  "DccOptions": {
+    "ManageServiceAddress": "https://dcc-service-develop.masastack.com/",
+    "RedisOptions": {
+      "Servers": [
+        {
+          "Host": "10.175.207.202",
+          "Port": 30260
+        }
+      ],
+      "DefaultDatabase": 0,
+      "Password": "Hzss@123redis"
+    },
+    "Secret": ""
+  }
 }
