--- a/src/Services/Masa.Dcc.Service/appsettings.Develop.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Develop.json
@@ -1,30 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_dev;User Id=ss;Password=Hzss@123;"
-  },
-  "Masa:Observable": {
-    "OtlpUrl": "http://otel-dev-opentelemetry-collector-agent.opentelemetry:4317",
-    "ServiceName": "masa.dcc.service",
-    "ServiceVersion": "1.0.0",
-    "ServiceNameSpace": "Develop"
-  },
-  "RedisConfig": {
-    "Servers": [
-      {
-        "Host": "10.175.207.202",
-        "Port": 30260
-      }
-    ],
-    "DefaultDatabase": 0,
-    "Password": "Hzss@123redis"
-  },
-  "PmClientAddress": "https://pm-service-develop.masastack.com",
-  "IdentityServerUrl": "https://sso-develop.masastack.com"
+  "DccOptions": {
+    "ManageServiceAddress": "https://dcc-service-develop.masastack.com/",
+    "RedisOptions": {
+      "Servers": [
+        {
+          "Host": "10.175.207.202",
+          "Port": 30260
+        }
+      ],
+      "DefaultDatabase": 0,
+      "Password": "Hzss@123redis"
+    },
+    "Secret": ""
+  }
 }
