--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Masa.Dcc.Web.Admin.Server.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Masa.Dcc.Web.Admin.Server.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.StackSdks.Tsc" Version="1.0.0-preview.8" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Config" Version="1.0.0-preview.10" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Tsc" Version="1.0.0-preview.10" />
   </ItemGroup>
 
   <ItemGroup>
