--- a/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
+++ b/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
@@ -15,7 +15,7 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:6196",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_ENVIRONMENT": "Production",
         "DAPR_GRPC_PORT": "3801",
         "DAPR_HTTP_PORT": "3800",
         "VERSION": "1.0-Preview1",
