--- a/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
+++ b/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
@@ -15,13 +15,12 @@
       "launchUrl": "swagger",
       "applicationUrl": "http://localhost:6196",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Production",
+        "ASPNETCORE_ENVIRONMENT": "Development",
         "DAPR_GRPC_PORT": "3801",
         "DAPR_HTTP_PORT": "3800",
         "VERSION": "1.0-Preview1",
         "IS_DEMO": "False",
         "DOMAIN_NAME": "masastack.com",
-        "NAMESPACE": "masastack.com",
         "TLS_NAME": "",
         "CLUSTER": "Default",
         "OTLP_URL": "https://otel-collector.masastack:9013",
