--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -17,6 +17,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.7" />
 		<PackageReference Include="Mapster" Version="7.3.0" />
 		<PackageReference Include="Masa.BuildingBlocks.Dispatcher.Events" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.BuildingBlocks.StackSdks.Auth" Version="1.0.0-preview.15" />
@@ -29,7 +30,6 @@
 		<PackageReference Include="Masa.Contrib.Development.DaprStarter.AspNetCore" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.Events" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.Dispatcher.IntegrationEvents.EventLogs.EFCore" Version="1.0.0-preview.15" />
-		<PackageReference Include="FluentValidation" Version="10.4.0" />
 		<PackageReference Include="FluentValidation.AspNetCore" Version="10.4.0" />
 		<PackageReference Include="Dapr.AspNetCore" Version="1.8.0" />
 		<PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="1.0.0-preview.15" />
@@ -37,6 +37,7 @@
 		<PackageReference Include="Masa.Contrib.Ddd.Domain.Repository.EFCore" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.Exceptions" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.Service.MinimalAPIs" Version="1.0.0-preview.15" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Middleware" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.StackSdks.Config" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="1.0.0-preview.15" />
 		<PackageReference Include="Masa.Contrib.StackSdks.Tsc" Version="1.0.0-preview.15" />
