feat:Optimize code

--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -59,6 +59,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
+	  <Folder Include="Assets\Fonts\" />
 	  <Folder Include="Domain\App\Events\" />
 	</ItemGroup>
 </Project>
