feat: update open api and Modify the way to get the secret key

--- a/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
+++ b/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
@@ -21,6 +21,7 @@
         "VERSION": "1.0-Preview1",
         "IS_DEMO": "False",
         "DOMAIN_NAME": "masastack.com",
+        "NAMESPACE": "masastack.com",
         "TLS_NAME": "",
         "CLUSTER": "Default",
         "OTLP_URL": "https://otel-collector.masastack:9013",
@@ -31,7 +32,7 @@
         "ELASTIC": "{\"ESNode\": \"http://10.10.90.189\",\"Index\": \"auth_user_development\",\"ESPort\":30200}",
         "ENVIRONMENT": "Development",
         "ADMIN_PWD": "admin_pwd",
-        "DCC_SECRET": "dcc_secret"
+        "DCC_SECRET": "masastack.com"
       }
     },
     "IIS Express": {
