--- a/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
+++ b/src/ApiGateways/Masa.Dcc.ApiGateways.Caller/Masa.Dcc.ApiGateways.Caller.csproj
@@ -7,10 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="1.0.0-preview.21" />
-    <PackageReference Include="Masa.Contrib.StackSdks.Caller" Version="1.0.0-preview.21" />
-    <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="1.0.0-preview.21" />
-    <PackageReference Include="Masa.Utils.Configuration.Json" Version="1.0.0-preview.21" />
+    <PackageReference Include="Masa.Contrib.Service.Caller.HttpClient" Version="$(MasaFrameworkPackageVersion)" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Caller" Version="$(MasaFrameworkPackageVersion)" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="$(MasaFrameworkPackageVersion)" />
+    <PackageReference Include="Masa.Utils.Configuration.Json" Version="$(MasaFrameworkPackageVersion)" />
   </ItemGroup>
 
   <ItemGroup>
