--- a/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
+++ b/src/Services/Masa.Dcc.Service/Masa.Dcc.Service.Admin.csproj
@@ -17,7 +17,7 @@
 	</ItemGroup>
 	
 	<ItemGroup>
-    <PackageReference Include="Masa.Contrib.StackSdks.Config" Version="1.0.0-preview.24" />
+    <PackageReference Include="Masa.Contrib.StackSdks.Config" Version="$(MasaFrameworkPackageVersion)" />
     <PackageReference Include="Masa.Utils.Extensions.Validations.FluentValidation" Version="$(MasaFrameworkPackageVersion)" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="6.0.7" />
 		<PackageReference Include="Mapster" Version="7.3.0" />
