--- a/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
+++ b/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
@@ -1,12 +1,4 @@
 ﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:46196",
-      "sslPort": 46496
-    }
-  },
   "profiles": {
     "Masa.Dcc.Services": {
       "commandName": "Project",
@@ -18,20 +10,19 @@
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DAPR_GRPC_PORT": "3801",
         "DAPR_HTTP_PORT": "3800",
-        "VERSION": "1.0-Preview1",
+        "VERSION": "1.0-Prev",
         "IS_DEMO": "False",
         "DOMAIN_NAME": "masastack.com",
         "NAMESPACE": "masastack.com",
-        "TLS_NAME": "",
         "CLUSTER": "Default",
         "OTLP_URL": "https://otel-collector.masastack:9013",
         "REDIS": "{\"RedisHost\": \"10.175.207.202\", \"RedisPort\": 30260, \"RedisDb\": 0,\"RedisPassword\": \"Hzss@123redis\"}",
         "CONNECTIONSTRING": "{\"Server\": \"10.175.171.201\", \"Port\": 32679,\"Database\":\"pm-dev\",\"UserId\": \"ss\",\"Password\":\"Hzss@123\"}",
         "MASA_SERVER": "{\"pm\":{\"server\":\"pm-service-develop\"},\"dcc\":{\"server\":\"dcc-service-develop\"},\"auth\":{\"server\":\"auth-service-develop\"},\"mc\":{\"server\":\"mc-service-develop\"},\"scheduler\":{\"server\":\"scheduler-service-server-develop\",\"worker\":\"scheduler-service-worker-develop\"},\"tsc\":{\"server\":\"tsc-service-develop\"},\"alert\":{\"server\":\"alert-service-develop\"}}",
         "MASA_UI": "{\"pm\":{\"ui\":\"pm-develop\"},\"dcc\":{\"ui\":\"dcc-develop\"},\"auth\":{\"ui\":\"auth-develop\",\"sso\":\"sso-develop\"},\"mc\":{\"ui\":\"mc-develop\"},\"scheduler\":{\"ui\":\"scheduler-develop\"},\"tsc\":{\"ui\":\"tsc-develop\"},\"alert\":{\"ui\":\"alert-develop\"}}",
-        "ELASTIC": "{\"ESNode\": \"http://10.10.90.189\",\"Index\": \"auth_user_development\",\"ESPort\":30200}",
+        "ELASTIC": "{\"Nodes\": [\"http://es-dev.lonsid.cn:9200\"],\"Index\": \"auth_user_development\"}",
         "ENVIRONMENT": "Development",
-        "ADMIN_PWD": "admin_pwd",
+        "ADMIN_PWD": "admin123",
         "DCC_SECRET": "masastack.com"
       }
     },
