--- a/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
+++ b/src/Services/Masa.Dcc.Service/Properties/launchSettings.json
@@ -21,7 +21,8 @@
         "ELASTIC": "{\"Nodes\": [\"http://es-dev.lonsid.cn:9200\"],\"Index\": \"auth_user_development\"}",
         "ENVIRONMENT": "Development",
         "ADMIN_PWD": "admin123",
-        "DCC_SECRET": "masastack.com"
+        "DCC_SECRET": "masastack.com",
+        "SUFFIX_IDENTITY": "dev"
       },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:6196"
