--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Properties/launchSettings.json
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Properties/launchSettings.json
@@ -30,7 +30,8 @@
         "ELASTIC": "{\"Nodes\": [\"http://es-dev.lonsid.cn:9200\"],\"Index\": \"auth_user_development\"}",
         "ENVIRONMENT": "Development",
         "ADMIN_PWD": "admin123",
-        "DCC_SECRET": "masastack.com"
+        "DCC_SECRET": "masastack.com",
+        "SUFFIX_IDENTITY": "dev"
       }
     },
     "IIS Express": {
