--- a/src/Services/Masa.Dcc.Service/appsettings.Development.json
+++ b/src/Services/Masa.Dcc.Service/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=10.175.171.201,32679;Database=dcc_dev;User Id=ss;Password=Hzss@123;"
   }
 }
