--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
   - docker-dev
   - deploy-dev
   - deploy-test
+  - deploy-staging
   - docker-prd
   - deploy-prd
 
@@ -40,11 +41,15 @@ docker-build-dev:
     - docker rmi $NEW_IMAGE_DCC_DEV   
     - docker rmi $NEW_IMAGE_DCC_UI_DEV
 
-deploy-dev-new:
+deploy-dev:
   stage: deploy-dev
   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
   only:
     - main
+  before_script:
+    - helm repo add masastack https://masastack.github.io/helm/
+    - helm repo update masastack
+    - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
@@ -57,6 +62,26 @@ deploy-test:
   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
   only:
     - main
+  before_script:
+    - helm repo add masastack https://masastack.github.io/helm/
+    - helm repo update masastack
+    - helm search repo masastack --devel --versions
+  script:
+    - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
+    - echo $CI_PIPELINE_ID
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n $NAMESPACE_TEST --set dcc.image.tag=$NEW_IMAGE_DCC_DEV -f ./values-dev.yaml
+  retry: 2
+  when: manual
+
+deploy-staging:
+  stage: deploy-staging
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  only:
+    - main
+  before_script:
+    - helm repo add masastack https://masastack.github.io/helm/
+    - helm repo update masastack
+    - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
