--- a/values/values-test.yaml
+++ b/values/values-test.yaml
@@ -4,9 +4,9 @@
 
 global:
   # 针对开发环境使用的变量进行数据库区分使用 { dev  staging  demo  production }
-  suffix_identity: "dev"
+  suffix_identity: "test"
   demo: false
-  secretName: ""
+  secretName: "masastack"
   domain: "masastack.com"
   image:
     repository: registry.cn-hangzhou.aliyuncs.com/masastack
@@ -14,21 +14,20 @@ global:
     # imagePullPolicy: IfNotPresent
     tag: "demo-1.0.0-rc2"
 
-
   sqlserver:
-    ip: ""
-    id: ""
-    port: "1433"
-    password: "p@ssw0rd"
+    ip: "10.130.0.235"
+    id: "ss"
+    port: "24878"
+    password: "Hzss@123"
 
   redis: 
-    ip: ""
-    db: "0"
-    port: "6379"
-    password: "p@ssw0rd"
+    ip: "10.130.0.235"
+    db: "1"
+    port: "24615"
+    password: "Hzss@123"
 
   elastic:
-    ip: ""
+    ip: "es-ydy-new.lonsid.cn"
     port: "9200"
 
   prometheus:
@@ -40,9 +39,9 @@ global:
     port: "9090"
 
   volumeclaims:
-    enabled: false
-    storageSize: "2Gi"
-    storageClassName: 
+    enabled: true
+    storageSize: "8Gi"
+    storageClassName: kcs-efs 
 
 pm:
   image: 
@@ -231,10 +230,10 @@ middleware-redis:
 
 middleware-prometheus:
   service:
-    # type: NodePort
-    type: ClusterIP
+    type: NodePort
+    #type: ClusterIP
     port: 9090
-    # nodePort: "30090"
+    nodePort: "30094"
 
 middleware-otel:
   service:
