--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,13 +15,9 @@ stages:
 variables:
   NEW_ALI_REGISTRY: registry.cn-hangzhou.aliyuncs.com
   NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masa/masa-dcc-service-admin:$CI_COMMIT_TAG
-  NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masa/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
   NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masa/masa-dcc-web-admin-server:$CI_COMMIT_TAG
-  NEW_IMAGE_DCC_UI_DEV: $NEW_ALI_REGISTRY/masa/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
   DOCKER_DCC_PATH: ./src/Services/Masa.Dcc.Service/Dockerfile
   DOCKER_DCC_UI_PATH: ./src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Dockerfile
-  NAMESPACE_DEV: masastack-dev
-  NAMESPACE_TEST: masastack-test
   NAMESPACE_PRD: masa-new-dcc-prd
 
 docker-build-dev:
@@ -49,11 +45,12 @@ deploy-dev:
   before_script:
     - helm repo add masastack https://masastack.github.io/helm/
     - helm repo update
+    - ls
     - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n $NAMESPACE_DEV --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values-dev.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-dev --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-dev.yaml
   retry: 2
   when: manual
 
@@ -69,7 +66,7 @@ deploy-test:
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n $NAMESPACE_TEST --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values-dev.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-test --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-test.yaml
   retry: 2
   when: manual
 
@@ -85,6 +82,6 @@ deploy-staging:
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n $NAMESPACE_TEST --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values-dev.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-staging.yaml
   retry: 2
   when: manual
