--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,32 +4,32 @@
 #     file: 'devops/sonar-scanner.yml'
 
 stages:
-#   - sonarqube
   - docker-dev
   - deploy-dev
   - deploy-test
-  - deploy-staging
   - docker-prd
-  - deploy-prd
+  - deploy-staging
+#  - deploy-prd
 
 variables:
   NEW_ALI_REGISTRY: registry.cn-hangzhou.aliyuncs.com
-  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masa/masa-dcc-service-admin:$CI_COMMIT_TAG
-  NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
-  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masa/masa-dcc-web-admin-server:$CI_COMMIT_TAG
-  NEW_IMAGE_DCC_UI_DEV : $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
   DOCKER_DCC_PATH: ./src/Services/Masa.Dcc.Service/Dockerfile
   DOCKER_DCC_UI_PATH: ./src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.Server/Dockerfile
-  NAMESPACE_PRD: masa-new-dcc-prd
 
-docker-build-dev:
+  NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
+  NEW_IMAGE_DCC_UI_DEV : $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
+
+  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_COMMIT_TAG
+  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_COMMIT_TAG
+
+docker-dev:
   stage: docker-dev
   tags:
     - linux-shell
   before_script:
     - docker login -u $CI_ALI_REGISTRY_USER -p $CI_ALI_REGISTRY_PASSWD $CI_ALI_REGISTRY_DOMAIN 
   only:
-    - main  
+    - develop
   script:
     - docker build -f $DOCKER_DCC_PATH -t $NEW_IMAGE_DCC_DEV .
     - docker push $NEW_IMAGE_DCC_DEV 
@@ -43,24 +43,22 @@ deploy-dev:
   stage: deploy-dev
   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
   only:
-    - main
+    - develop
   before_script:
     - helm repo add masastack https://masastack.github.io/helm/
     - helm repo update
-    - ls
     - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_PIPELINE_ID
     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-dev --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-dev.yaml
   retry: 2
-  when: manual
 
 deploy-test:
   stage: deploy-test
   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
   only:
-    - main
+    - develop
   before_script:
     - helm repo add masastack https://masastack.github.io/helm/
     - helm repo update
@@ -71,6 +69,23 @@ deploy-test:
     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-test --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-test.yaml
   retry: 2
   when: manual
+
+docker-prd:
+  stage: docker-prd
+  tags:
+    - linux-shell
+  before_script:
+    - docker login -u $CI_ALI_REGISTRY_USER -p $CI_ALI_REGISTRY_PASSWD $CI_ALI_REGISTRY_DOMAIN 
+  only:
+    - main  
+  script:
+    - docker build -f $DOCKER_DCC_PATH -t $NEW_IMAGE_DCC .
+    - docker push $NEW_IMAGE_DCC 
+    - docker build -f $DOCKER_DCC_UI_PATH -t $NEW_IMAGE_DCC_UI .
+    - docker push $NEW_IMAGE_DCC_UI
+  after_script:
+    - docker rmi $NEW_IMAGE_DCC
+    - docker rmi $NEW_IMAGE_DCC_UI
 
 deploy-staging:
   stage: deploy-staging
@@ -83,7 +98,22 @@ deploy-staging:
     - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
-    - echo $CI_PIPELINE_ID
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=dev-$CI_PIPELINE_ID -f ./values/values-staging.yaml
+    - echo $CI_COMMIT_TAG
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-staging.yaml
+  retry: 2
+
+deploy-prd:
+  stage: deploy-prd
+  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+  only:
+    - main
+  before_script:
+    - helm repo add masastack https://masastack.github.io/helm/
+    - helm repo update
+    - helm search repo masastack --devel --versions
+  script:
+    - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
+    - echo $CI_COMMIT_TAG
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
   retry: 2
   when: manual
