--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -102,18 +102,19 @@ deploy-staging:
     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-staging.yaml
   retry: 2
 
-deploy-prd:
-  stage: deploy-prd
-  image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
-  only:
-    - main
-  before_script:
-    - helm repo add masastack https://masastack.github.io/helm/
-    - helm repo update
-    - helm search repo masastack --devel --versions
-  script:
-    - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
-    - echo $CI_COMMIT_TAG
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
-  retry: 2
-  when: manual
+
+# deploy-prd:
+#   stage: deploy-prd
+#   image: registry.cn-hangzhou.aliyuncs.com/masa/library:helm3_latest
+#   only:
+#     - main
+#   before_script:
+#     - helm repo add masastack https://masastack.github.io/helm/
+#     - helm repo update
+#     - helm search repo masastack --devel --versions
+#   script:
+#     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
+#     - echo $CI_COMMIT_TAG
+#     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
+#   retry: 2
+#   when: manual
