--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ variables:
   NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
   NEW_IMAGE_DCC_UI_DEV : $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
 
-  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_COMMIT_TAG
-  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_COMMIT_TAG
+  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_PIPELINE_ID
+  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_PIPELINE_ID
 
 docker-dev:
   stage: docker-dev
@@ -99,7 +99,7 @@ deploy-staging:
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
     - echo $CI_COMMIT_TAG
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-staging.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-staging.yaml
   retry: 2
 
 deploy-prd:
@@ -114,6 +114,6 @@ deploy-prd:
   script:
     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
     - echo $CI_COMMIT_TAG
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-prd.yaml
   retry: 2
   when: manual
