--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deploy-staging:
     - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
-    - echo $CI_COMMIT_TAG
+    - echo $CI_PIPELINE_ID
     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-staging.yaml
   retry: 2
 
@@ -113,7 +113,7 @@ deploy-staging:
 #     - helm search repo masastack --devel --versions
 #   script:
 #     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
-#     - echo $CI_COMMIT_TAG
+#     - echo $CI_PIPELINE_ID
 #     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-prd.yaml
 #   retry: 2
 #   when: manual
