--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ variables:
   NEW_IMAGE_DCC_DEV: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:dev-$CI_PIPELINE_ID
   NEW_IMAGE_DCC_UI_DEV : $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:dev-$CI_PIPELINE_ID
 
-  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_COMMIT_TAG
-  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_COMMIT_TAG
+  NEW_IMAGE_DCC: $NEW_ALI_REGISTRY/masastack/masa-dcc-service-admin:$CI_PIPELINE_ID
+  NEW_IMAGE_DCC_UI: $NEW_ALI_REGISTRY/masastack/masa-dcc-web-admin-server:$CI_PIPELINE_ID
 
 docker-dev:
   stage: docker-dev
@@ -98,10 +98,9 @@ deploy-staging:
     - helm search repo masastack --devel --versions
   script:
     - echo $KUBE_CONFIG_MASA_YDY | base64 -d > ./config
-    - echo $CI_COMMIT_TAG
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-staging.yaml
+    - echo $CI_PIPELINE_ID
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-staging --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-staging.yaml
   retry: 2
-
 
 # deploy-prd:
 #   stage: deploy-prd
@@ -114,7 +113,7 @@ deploy-staging:
 #     - helm search repo masastack --devel --versions
 #   script:
 #     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
-#     - echo $CI_COMMIT_TAG
-#     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
+#     - echo $CI_PIPELINE_ID
+#     - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_PIPELINE_ID -f ./values/values-prd.yaml
 #   retry: 2
 #   when: manual
