--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -115,6 +115,6 @@ deploy-prd:
   script:
     - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
     - echo $CI_COMMIT_TAG
-    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack-prd --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
+    - helm --kubeconfig ./config upgrade --install masastack masastack/masastack --version 1.0.0-rc2 -n masastack --set dcc.image.tag=$CI_COMMIT_TAG -f ./values/values-prd.yaml
   retry: 2
   when: manual
