--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,5 +1,5 @@
 <Project>
   <PropertyGroup>
-    <MasaFrameworkPackageVersion>1.0.0-rc.4.3</MasaFrameworkPackageVersion>
+    <MasaFrameworkPackageVersion>1.0.0</MasaFrameworkPackageVersion>
   </PropertyGroup>
 </Project>
