--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -98,7 +98,7 @@ deploy-prd:
   only:
     - tags
   script:
-    - echo $KUBE_CONFIG_MASA_PRD | base64 -d > ./config
+    - echo $KUBE_CONFIG_LSD_PRD_YDY | base64 -d > ./config
     - echo $CI_COMMIT_TAG
     - kubectl --kubeconfig ./config set image deployment/dcc dcc=$NEW_IMAGE_DCC_UI -n $NAMESPACE_PRD
     - kubectl --kubeconfig ./config set image deployment/dcc-service dcc-service=$NEW_IMAGE_DCC -n $NAMESPACE_PRD
