feat: upgrade dotnet 8.0

--- a/Masa.Dcc.Infrastructure.Domain.Shared/Masa.Dcc.Infrastructure.Domain.Shared.csproj
+++ b/Masa.Dcc.Infrastructure.Domain.Shared/Masa.Dcc.Infrastructure.Domain.Shared.csproj
@@ -1,7 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+  <PropertyGroup>  
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -10,7 +9,7 @@
     <PackageReference Include="Masa.BuildingBlocks.Ddd.Domain" Version="$(MasaFrameworkPackageVersion)" />
     <PackageReference Include="Masa.Contrib.Ddd.Domain" Version="$(MasaFrameworkPackageVersion)" />
     <PackageReference Include="Masa.Contrib.StackSdks.Pm" Version="$(MasaStackSdksPackageVersion)" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.7.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="$(DotnetVersion)" />
   </ItemGroup>
 
   <ItemGroup>
