--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,8 @@
 <Project>
   <PropertyGroup>
     <MasaFrameworkPackageVersion>1.2.0-preview.5</MasaFrameworkPackageVersion>
-    <MasaStackSdksPackageVersion>1.2.1-preview.10</MasaStackSdksPackageVersion>
+    <MasaStackSdksPackageVersion>1.2.1-preview.17</MasaStackSdksPackageVersion>
+    <TargetFramework>net8.0</TargetFramework>
+    <DotnetVersion>8.0</DotnetVersion>
   </PropertyGroup>
 </Project>
