--- a/Masa.Dcc.Infrastructure.EFCore.PostgreSql/Masa.Dcc.Infrastructure.EFCore.PostgreSql.csproj
+++ b/Masa.Dcc.Infrastructure.EFCore.PostgreSql/Masa.Dcc.Infrastructure.EFCore.PostgreSql.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+  <PropertyGroup>   
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.29" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.0">
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="$(DotnetVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools"  Version="$(DotnetVersion)">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
