--- a/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.WebAssembly/Masa.Dcc.Web.Admin.WebAssembly.csproj
+++ b/src/Web/Masa.Dcc.Web.Admin/Masa.Dcc.Web.Admin.WebAssembly/Masa.Dcc.Web.Admin.WebAssembly.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
-
   <PropertyGroup>    
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"  Version="$(DotnetVersion)"/>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer"  Version="$(DotnetVersion)" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="2.2.0" />
+    <PackageReference Include="Blazor.WebAssembly.SingleSpa" Version="0.4.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.CustomElements" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.10" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
