feat: add oss token

--- a/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
+++ b/src/Contracts/Masa.Dcc.Contracts.Admin/Masa.Dcc.Contracts.Admin.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Masa.BuildingBlocks.StackSdks.Dcc.Contracts" Version="$(MasaStackSdksPackageVersion)" />
+    <PackageReference Include="Masa.BuildingBlocks.StackSdks.Dcc.Contracts" Version="2.4.23" />
     <PackageReference Include="Masa.Utils.Data.DataAnnotations" Version="$(MasaFrameworkPackageVersion)" />
   </ItemGroup>
 
